clusters/production/apps/ceph-csi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceph-csi-production
  labels:
    app.kubernetes.io/name: ceph-csi
    app.kubernetes.io/component: storage
